--- a/style.css
+++ b/style.css
@@ -10,3 +10,43 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #F9F9F9;
 }
+
+.container{
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+/* header  */
+
+
+.header{
+    padding: 37px 84px 47px 84px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+.header-nav{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.header-nav a{
+    color: #262626;
+    font-weight: 700;
+    padding: 8px 30px;
+    font-size: 14px;
+    border-radius: 40px;
+    transition: .3s;
+}
+
+
+.header-nav a:hover{
+    background-color: #4CE0D7;
+    transform: translateY(5px);
+}
